Add support for consolidated form for object storage
This makes it possible to configure external S3 providers and use
Microsoft Azure via the Workhorse client.

--- a/support/templates/gitlab-workhorse.config.toml.erb
+++ b/support/templates/gitlab-workhorse.config.toml.erb
@@ -1,2 +1,19 @@
 [redis]
 URL = "unix:<%= config.redis_socket %>"
+
+<%- if config.object_store.consolidated_form? && config.object_store.connection['provider'] -%>
+[object_storage]
+  provider = "<%= config.object_store.connection['provider'] %>"
+
+  <%- if config.object_store.connection['provider'] == 'AWS' -%>
+[object_storage.s3]
+  aws_access_key_id = "<%= config.object_store.connection['aws_access_key_id'] %>"
+  aws_secret_access_key = "<%= config.object_store.connection['aws_secret_access_key'] %>"
+  <%- end -%>
+
+  <%- if config.object_store.connection['provider'] == 'AzureRM' -%>
+[object_storage.azurerm]
+  azure_storage_account_name = "<%= config.object_store.connection['azure_storage_account_name'] %>"
+  azure_storage_access_key = "<%= config.object_store.connection['azure_storage_access_key'] %>"
+  <%- end -%>
+<%- end -%>
