--- a/support/templates/nginx/conf/nginx.conf.erb
+++ b/support/templates/nginx/conf/nginx.conf.erb
@@ -55,32 +55,28 @@ http {
     ssl_certificate_key <%= config.gdk_root.join(config.nginx.ssl.key) %>;
 <%- end -%>
 
+    proxy_set_header    Host                $http_host;
+    proxy_set_header    X-Real-IP           $remote_addr;
+    proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
+    proxy_set_header    X-Forwarded-Proto   $scheme;
+    proxy_set_header    Upgrade             $http_upgrade;
+    proxy_set_header    Connection          $connection_upgrade;
+
+    proxy_http_version 1.1;
+    proxy_read_timeout 300;
+
+    location ~ (/api/v\d/jobs/\d+/artifacts$|\.git/git-receive-pack$|\.git/gitlab-lfs/objects|\.git/info/lfs/objects/batch$) {
+      proxy_cache off;
+      proxy_pass http://gitlab-workhorse;
+      proxy_request_buffering off;
+    }
+
     location / {
-      proxy_set_header    Host                $http_host;
-      proxy_set_header    X-Real-IP           $remote_addr;
-      proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
-      proxy_set_header    X-Forwarded-Proto   $scheme;
-      proxy_set_header    Upgrade             $http_upgrade;
-      proxy_set_header    Connection          $connection_upgrade;
-
-      proxy_http_version 1.1;
-      proxy_read_timeout 300;
-
       proxy_pass http://gitlab-workhorse;
     }
 <%- if config.gitlab_k8s_agent? -%>
 
     location = <%= config.gitlab_k8s_agent.__listen_url_path %> {
-      proxy_set_header    Host                $http_host;
-      proxy_set_header    X-Real-IP           $remote_addr;
-      proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
-      proxy_set_header    X-Forwarded-Proto   $scheme;
-      proxy_set_header    Upgrade             $http_upgrade;
-      proxy_set_header    Connection          $connection_upgrade;
-
-      proxy_http_version 1.1;
-      proxy_read_timeout 300;
-
       proxy_pass http://gitlab-k8s-agent;
     }
 <%- end -%>
