--- a/support/templates/nginx/conf/nginx.conf.erb
+++ b/support/templates/nginx/conf/nginx.conf.erb
@@ -65,7 +65,7 @@ http {
     proxy_http_version 1.1;
     proxy_read_timeout 300;
 
-    location ~ (/api/v\d/jobs/\d+/artifacts$|\.git/git-receive-pack$|\.git/gitlab-lfs/objects|\.git/info/lfs/objects/batch$) {
+    location ~ (<%= config.nginx.__request_buffering_off_routes.join('|') %>) {
       proxy_cache off;
       proxy_pass http://gitlab-workhorse;
       proxy_request_buffering off;
