Disable prepared statements to be closer to production config

--- a/support/templates/database.yml.erb
+++ b/support/templates/database.yml.erb
@@ -5,6 +5,7 @@ development:
   host: <%= config.postgresql.host %>
   port: <%= config.postgresql.port %>
   pool: 10
+  prepared_statements: false
   variables:
     statement_timeout: 120s
 <%- if config.load_balancing.enabled -%>
@@ -22,5 +23,6 @@ test: &test
   host: <%= config.postgresql.host %>
   port: <%= config.postgresql.port %>
   pool: 10
+  prepared_statements: false
   variables:
     statement_timeout: 120s
