--- a/support/templates/gitlab-shell.config.yml.erb
+++ b/support/templates/gitlab-shell.config.yml.erb
@@ -13,7 +13,7 @@ user: git
 # only listen on a Unix domain socket. For Unix domain sockets use
 # "http+unix://<urlquoted-path-to-socket>", e.g.
 # "http+unix://%2Fpath%2Fto%2Fsocket"
-gitlab_url: "http+unix://<%= config.gitlab.__socket_file_escaped %>"
+gitlab_url: "<%= config.__uri %>"
 
 # See installation.md#using-https for additional HTTPS configuration details.
 http_settings:
