Move redis socket setting to GDK::Config
`redis_socket` was mistakenly added to `GDK::ConfigSettings`, while it
should have been defined in `GDK::Config`. This commit moves that
method.

--- a/support/templates/cable.yml.erb
+++ b/support/templates/cable.yml.erb
@@ -1,8 +1,8 @@
 development:
   adapter: redis
-  url: unix:<%= config.redis_socket %>
+  url: unix:<%= config.redis.__socket_file %>
   channel_prefix: development_
 test:
   adapter: redis
-  url: unix:<%= config.redis_socket %>
+  url: unix:<%= config.redis.__socket_file %>
   channel_prefix: test_
