--- a/support/templates/resque.yml.erb
+++ b/support/templates/resque.yml.erb
@@ -1,2 +1,2 @@
-development: unix:<%= config.redis_socket %>
-test: unix:<%= config.redis_socket %>
+development: unix:<%= config.redis.__socket_file %>
+test: unix:<%= config.redis.__socket_file %>
