PG13 renamed wal_keep_segments to wal_keep_size
To support PG13 we no longer can set wal_keep_segments. Instead we
should set wal_keep_size. The relation between these two is:

wal_keep_size = wal_keep_segments * wal_segment_size (typically 16MB)

From the PostgreSQL 13 release notes:
https://www.postgresql.org/docs/current/release-13.html

--- a/support/templates/postgresql.gdk.conf.erb
+++ b/support/templates/postgresql.gdk.conf.erb
@@ -10,7 +10,11 @@ shared_buffers = '256MB'
 wal_level = hot_standby
 max_replication_slots = 1
 max_wal_senders = 10
+<% if pg_version >= 13 %>
+wal_keep_size = 160
+<% else %>
 wal_keep_segments = 10
+<% end %>
 hot_standby = on
 
 <% if config.root.geo.secondary? && pg_version >= 12 %>
