--- a/support/templates/database.yml.erb
+++ b/support/templates/database.yml.erb
@@ -1,7 +1,7 @@
 development:
   adapter: postgresql
   encoding: unicode
-  database: gitlabhq_development
+  database: <%= postgresql.default_database %>
   host: <%= config.postgresql.host %>
   port: <%= config.postgresql.port %>
   pool: 10
