--- a/support/templates/database_geo.yml.erb
+++ b/support/templates/database_geo.yml.erb
@@ -1,7 +1,7 @@
 development:
   adapter: postgresql
   encoding: unicode
-  database: gitlabhq_geo_development
+  database: <%= postgresql.default_database %>
   host: <%= config.postgresql.geo.host %>
   port: <%= config.postgresql.geo.port %>
   pool: 5
