Make container registry client settings robust
Specifies RSA private key from GDK_ROOT used for
generation of an access token for container registry.

Signed-off-by: Takuya Noguchi <takninnovationresearch@gmail.com>

--- a/support/templates/gitlab.yml.erb
+++ b/support/templates/gitlab.yml.erb
@@ -385,8 +385,8 @@ production: &base
     host: <%= config.registry.host %>
     port: <%= config.registry.port %>
     api_url: http://<%= config.registry.api_host %>:<%= config.registry.port %>
-    key: ../localhost.key
-    path: ../registry/storage/
+    key: <%= config.gdk_root %>/localhost.key
+    path: <%= config.gdk_root %>/registry/storage/
     issuer: gitlab-issuer
     # notification_secret: '' # Notification secret, use the same secret you use in registry/config.yml
 
