--- a/support/templates/gitlab.yml.erb
+++ b/support/templates/gitlab.yml.erb
@@ -834,8 +834,9 @@ production: &base
   webpack:
     dev_server:
       enabled: true
-      host: <%= config.webpack.host %>
-      port: <%= config.webpack.port %>
+      host: <%= config.webpack.public_host %>
+      port: <%= config.webpack.public_port %>
+      https: <%= config.webpack.public_https? %>
 
   ## Monitoring
   # Built in monitoring settings
@@ -999,8 +1000,9 @@ test:
   webpack:
     dev_server:
       enabled: true
-      host: <%= config.webpack.host %>
-      port: <%= config.webpack.port %>
+      host: <%= config.webpack.public_host %>
+      port: <%= config.webpack.public_port %>
+      https: <%= config.webpack.public_https? %>
 
   pages:
     path: tmp/tests/pages
