Add redis config for kubernetes agent

--- a/support/templates/gitlab-k8s-agent-config.yml.erb
+++ b/support/templates/gitlab-k8s-agent-config.yml.erb
@@ -6,3 +6,7 @@ agent:
 gitlab:
   address: <%= config.gitlab_k8s_agent.__gitlab_address %>
   authentication_secret_file: <%= config.gitlab_k8s_agent.__secret_file %>
+redis:
+  network: unix
+  server:
+    address: <%= config.redis.__socket_file %>
