Fix grafana Makefile, Procfile template, and update docs

--- a/support/templates/gdk-config.mk.erb
+++ b/support/templates/gdk-config.mk.erb
@@ -1,6 +1,6 @@
 architecture = <%= config.__architecture %>
-elasticsearch_mac_tar_gz_sha512 = <%= config.elasticsearch.mac_checksum %>
 elasticsearch_linux_tar_gz_sha512 = <%= config.elasticsearch.linux_checksum %>
+elasticsearch_mac_tar_gz_sha512 = <%= config.elasticsearch.mac_checksum %>
 elasticsearch_version = <%= config.elasticsearch.version %>
 gdk_ask_to_restart_after_update = <%= config.gdk.ask_to_restart_after_update %>
 gdk_debug = <%= config.gdk.debug || ENV['GDK_DEBUG'] == 'true' %>
@@ -11,26 +11,27 @@ gitaly_repo = <%= config.repositories.gitaly %>
 gitlab_development_root = <%= config.gdk_root %>
 gitlab_docs_repo = <%= config.repositories.gitlab_docs %>
 gitlab_elasticsearch_indexer_repo = <%= config.repositories.gitlab_elasticsearch_indexer %>
-gitlab_pages_port = <%= config.gitlab_pages.port %>
-gitlab_pages_repo = <%= config.repositories.gitlab_pages %>
 gitlab_k8s_agent_enabled = <%= config.gitlab_k8s_agent? %>
 gitlab_k8s_agent_repo = <%= config.repositories.gitlab_k8s_agent %>
+gitlab_pages_port = <%= config.gitlab_pages.port %>
+gitlab_pages_repo = <%= config.repositories.gitlab_pages %>
 gitlab_repo = <%= config.repositories.gitlab %>
 gitlab_shell_repo = <%= config.repositories.gitlab_shell %>
 gitlab_workhorse_repo = <%= config.repositories.gitlab_workhorse %>
+grafana_enabled = <%= config.grafana.enabled? %>
 hostname = <%= config.hostname %>
 https = <%= config.https? %>
 jaeger_server_enabled = <%= config.tracer.jaeger? %>
 jaeger_version = <%= config.tracer.jaeger.version %>
 platform = <%= config.__platform %>
 port = <%= config.port %>
-postgresql_host = <%= config.postgresql.host %>
 postgresql_bin_dir = <%= config.postgresql.bin_dir %>
 postgresql_data_dir = <%= config.postgresql.data_dir %>
 postgresql_dir = <%= config.postgresql.dir %>
-postgresql_geo_host = <%= config.postgresql.geo.host %>
 postgresql_geo_dir = <%= config.postgresql.geo.dir %>
+postgresql_geo_host = <%= config.postgresql.geo.host %>
 postgresql_geo_port = <%= config.postgresql.geo.port %>
+postgresql_host = <%= config.postgresql.host %>
 postgresql_port = <%= config.postgresql.port %>
 postgresql_replica_dir = <%= config.postgresql.replica_dir %>
 postgresql_replication_user = <%= config.postgresql.replication_user %>
