praefect: Use JSON-formatted logging
When not configuring any logging format in either Gitaly or Praefect,
then we default to a mostly unstructured "text" logging format. This
format is missing fields which would be present in other logging formats
and is thus suboptimal. This is why the GDK already configures Gitaly to
use the JSON log format, but for Praefect it leaves the default logging
format in place.

Let's change Praefect to also use JSON logging to fix this shortcoming
and be consistent across both Gitaly and Praefect.

--- a/support/templates/praefect.config.toml.erb
+++ b/support/templates/praefect.config.toml.erb
@@ -9,8 +9,8 @@ socket_path = "<%= config.praefect.address %>"
 <%= '#' unless config.prometheus.enabled? %>prometheus_listen_addr = "<%= config.hostname %>:<%= config.prometheus.praefect_exporter_port %>"
 
 # # You can optionally configure Praefect to output JSON-formatted log messages to stdout
-# [logging]
-#   format = "json"
+[logging]
+format = "json"
 # # Optional: Set log level to only log entries with that severity or above
 # # One of, in order: debug, info, warn, errror, fatal, panic
 # # Defaults to "info"
