Applied suggestions from review

--- a/support/templates/gitlab-pages.conf.erb
+++ b/support/templates/gitlab-pages.conf.erb
@@ -4,10 +4,10 @@ pages-root=<%= config.gdk_root.join('gitlab', 'shared', 'pages') %>
 pages-domain=<%= config.gitlab_pages.host %>
 api-secret-key=<%= config.gitlab_pages.secret_file %>
 log-verbose=<%= config.gitlab_pages.verbose %>
-<% if config.gitlab_pages.access_control %>
+<%- if config.gitlab_pages.access_control? -%>
 auth-client-id=<%= config.gitlab_pages.auth_client_id %>
 auth-client-secret=<%= config.gitlab_pages.auth_client_secret %>
 # random 32-byte string
 auth-secret=<%= rand(36**32).to_s(36) %>
 auth-redirect-uri=<%= 'http://'+config.gitlab_pages.__uri+'/auth' %>
-<% end %>
+<%- end -%>
