gitlab_pages.auth_secret doesn't need to be set

--- a/support/templates/gitlab-pages.conf.erb
+++ b/support/templates/gitlab-pages.conf.erb
@@ -7,6 +7,6 @@ log-verbose=<%= config.gitlab_pages.verbose %>
 <%- if config.gitlab_pages.access_control? -%>
 auth-client-id=<%= config.gitlab_pages.auth_client_id %>
 auth-client-secret=<%= config.gitlab_pages.auth_client_secret %>
-auth-secret=<%= config.gitlab_pages.auth_secret %>
+auth-secret=<%= config.gitlab_pages.__auth_secret %>
 auth-redirect-uri=<%= config.gitlab_pages.__auth_redirect_uri %>
 <%- end -%>
