Add KAS URL configuration
See https://gitlab.com/gitlab-org/gitlab/-/merge_requests/54260/

--- a/support/templates/gitlab-k8s-agent-config.yml.erb
+++ b/support/templates/gitlab-k8s-agent-config.yml.erb
@@ -6,6 +6,11 @@ agent:
 gitlab:
   address: <%= config.gitlab_k8s_agent.__gitlab_address %>
   authentication_secret_file: <%= config.gitlab_k8s_agent.__secret_file %>
+api:
+  listen:
+    network: <%= config.gitlab_k8s_agent.internal_api_listen_network %>
+    address: <%= config.gitlab_k8s_agent.internal_api_listen_address %>
+    authentication_secret_file: <%= config.gitlab_k8s_agent.__secret_file %>
 redis:
   network: unix
   server:
