--- a/support/templates/gitlab.yml.erb
+++ b/support/templates/gitlab.yml.erb
@@ -824,6 +824,12 @@ production: &base
     # Default is '.gitlab_workhorse_secret' relative to Rails.root (i.e. root of the GitLab app).
     # secret_file: /home/git/gitlab/.gitlab_workhorse_secret
 
+  gitlab_kas:
+    enabled: <%= config.gitlab_k8s_agent.enabled? %>
+    internal_url: <%= config.gitlab_k8s_agent.__internal_api_url %>
+    external_url: <%= config.gitlab_k8s_agent.__url_for_agentk %>
+    secret_file: <%= config.gitlab_k8s_agent.__secret_file %>
+
   ## Git settings
   # CAUTION!
   # Use the default values unless you really know what you are doing
