New asdf.opt_out setting

--- a/support/templates/gdk-config.mk.erb
+++ b/support/templates/gdk-config.mk.erb
@@ -1,4 +1,5 @@
 architecture = <%= config.__architecture %>
+asdf_opt_out = <%= config.asdf.opt_out? %>
 elasticsearch_linux_tar_gz_sha512 = <%= config.elasticsearch.linux_checksum %>
 elasticsearch_mac_tar_gz_sha512 = <%= config.elasticsearch.mac_checksum %>
 elasticsearch_version = <%= config.elasticsearch.version %>
